# NetworkSecurity_DS_Project

./: .gitignore  README.md  main.py  push_data.py  pyproject.toml  requirements.txt  setup.py  test_mongodb.py
networksecurity/components/: model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
