[project]
name = "networksecurity-ds-project"
author = "Hamza Imtiaz"
gmail = "hamzaimtiaz8668@gmail.com"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.0",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
