[project]
name = "networksecurity-ds-project-for-phishing-data"
author = "Hamza Imtiaz"
email = "hamzaimtiaz8668@gmail.com"
version = "0.1.0"
description = "My Network Security Data Science Project For Phishing Data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.4.26",
    "dill>=0.4.0",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pymongo>=4.13.0",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
